LPS-33707 - Set z-index on #banner nav to avoid covering portlets

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
@@ -42,6 +42,9 @@ hr, .separator {
 	height: auto;
 	margin-top: 1.4em;
 	position: relative;
+}
+
+#banner nav {
 	z-index: 210;
 }
 
